CHANGES IN VERSION 1.5.2
* Warning for rank ties
* Leading edge is now ordered by decreasing of absolute statistic value

CHANGES IN VERSION 1.5.1
* Reproducibility fixes
* Added collapsePathway function to intelligently collapse overlapping pathways
* Added fgseaLabel function for label-permuting GSEA

CHANGES IN VERSION 1.1.2
* Fixed building issues

CHANGES IN VERSION 1.1.1

* Fixed bug: not using Multicore on Windows

CHANGES IN VERSION 0.99.8

* Results are now reproducible with set.seed()


CHANGES IN VERSION 0.99.7

* Performance improvement: slightly better sampling and better segment tree

CHANGES IN VERSION 0.99.6
-------------------------

* Fixed bug with failing when zero pathways are analyzed

CHANGES IN VERSION 0.99.5
-------------------------

* Using `BiocParallel` package instead of `parallel`
* Implemented leading edge analysis (`leadingEdge` column of fgsea result)
